# apps/product-service/src/routes/product.router.ts
@@ -1,5 +1,5 @@
 import express from 'express';
-import { createDiscountCode, deleteDiscountCode, deleteProductImage, getCategories, getDiscountCodes, uploadProductImage } from '../controller/product.controller';
+import { createDiscountCode, createProduct, deleteDiscountCode, deleteProduct, deleteProductImage, getCategories, getDiscountCodes, getShopProducts, restoreProduct, uploadProductImage } from '../controller/product.controller';
 import { isSeller } from '@packages/middelware/authorizeRole';
 import { isAuthenticated } from '@packages/middelware/isAuthenticated';
 
@@ -12,6 +12,22 @@ router.delete("/delete-discount-code/:id", isAuthenticated, deleteDiscountCode);
 
 router.post('/upload-image',isAuthenticated, uploadProductImage);
 
-router.post('/delete-image', deleteProductImage);
+router.post('/delete-image',isAuthenticated, deleteProductImage);
+router.post('/create-product', isAuthenticated, createProduct);
+router.post('/create-product', isAuthenticated, createProduct);
+router.get('/shop-products', isAuthenticated, getShopProducts);
+router.delete(
+  "/delete-product/:productId",
+  isAuthenticated,
+  deleteProduct
+);
+
+// RESTORE
+router.patch(
+  "/restore-product/:productId",
+  isAuthenticated,
+  restoreProduct
+);
+
 
 export default router;
